# k8s-job-reaper

./: Cargo.toml  Dockerfile  README.md
chart/job-reaper/: Chart.yaml  values.yaml
chart/job-reaper/templates/: _helpers.tpl  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
src/: main.rs
