[package]
name = "k8s-job-reaper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3.17"
kube = { version = "0.82.0", features = ["runtime"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.8", features = ["fmt", "env-filter"]}

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "usage", "env", "std"]
